<resources>
    <string name="app_name">Control De Ganado</string>

    <!--MENU-->
    <!--Animales-->
    <string name="animals">Animales</string>
    <string name="addAnimal">Registrar Animal</string>
    <string name="listAnimals">Lista de Animales</string>
    <!--Vacunas-->
    <string name="vaccines">Vacunas</string>
    <string name="applyVaccine">Aplicar Vacuna</string>
    <string name="appliedVaccines">Vacunas Aplicadas</string>
    <!--Enfermedades-->
    <string name="diseases">Enfermedades</string>
    <string name="addDisease">Registrar Enfermedad</string>
    <string name="listDiseases">Lista de Enfermedades</string>
    <!--Gastos-->
    <string name="expenses">Gastos</string>
    <string name="addExpenses">Registrar Gasto</string>
    <string name="listExpenses">Lista de Gastos</string>
    <!--END MENU-->

    <!--ADD ANIMAL-->
    <string name="animalType">Tipo de Ganado</string>
    <string name="name">Nombre</string>
    <string name="buyPrice">Precio de compra</string>
    <string name="birthDate">Fecha de nacimiento</string>
    <string name="birthWeight">Peso al nacer</string>
    <string name="color">Color</string>
    <string name="gender">Sexo</string>
    <string name="weaningDate">Fecha de destete</string>
    <string name="weaningWeight">Peso al destete</string>
    <string name="soldDate">Fecha de venta</string>
    <string name="soldWeight">Peso de venta</string>
    <string name="soldPrice">Precio de venta</string>
    <string name="male">Macho</string>
    <string name="female">Hembra</string>
    <string name="save">Guardar</string>
    <string name="errorNullName">Escriba el nombre del animal</string>
    <string name="errorNullColor">Escriba el color del animal</string>
    <string name="msgSaved">Registro guardado correctamente</string>
    <string name="mother">Madre</string>
    <string name="father">Padre</string>
    <string name="unknown">Desconocido</string>

    <string name="edit">Editar</string>
    <string name="save_changes">Guardar cambios</string>
    <string name="msgChangesSaved">Cambios guardados correctamente</string>
    <string name="dosesPerKg">Dosis por kilogramo</string>
    <string name="isPregnantAllowed">Permitido en embarazadas</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="errorDoseVaccineNull">Escriba la dosis por kilogramo</string>
    <string name="errorNameVaccineNull">Escriba el nombre de la vacuna</string>
    <string name="addVaccine">Registrar Vacuna</string>
    <string name="listVaccines">Lista de Vacunas</string>

    <string name="applicationDate">Fecha de aplicación</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vaccine">Vacuna</string>
    <string name="vaccinatedAnimals">Animales vacunados</string>
    <string name="periodicity">Repetir cada (meses)</string>
    <string name="isRepeat">Es periodica</string>
    <string name="selectAtLeastOneAnimal">Debe seleccionar al menos un animal</string>
    <string name="avatarDescription">Avatar del tipo de animal</string>
    <string name="vaccinationHistory">Historial de vacunación</string>
    <!--END ADD ANIMAL-->
</resources>
