<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.cruiz90.controldeganado.fragments.DetailsAppliedVaccineFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vaccine" />

    <TextView
        android:id="@+id/tv_vaccine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/applicationDate" />

    <TextView
        android:id="@+id/tv_applicationDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/vaccinatedAnimals" />

    <ListView
        android:id="@+id/lv_vaccinatedAnimals"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
